# OpenCL-Query

./: .gitignore  CMakeLists.txt
src/: OpenCL-Query.cpp
